tests/ui/formatter/fail/implicit_after_named.stderr
error: argument never used
 --> tests/ui/formatter/fail/implicit_after_named.rs:3:17
  |
3 | #[derive(Debug, Error)]
  |                 ^^^^^
  |                 |
  |                 argument never used
  |                 formatting specifier missing
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
